src/objects/System_Design__c.object
<CustomObject>
    <description>AstrumCRM/AstrumPM - The Solar System Design.  Each Property can have one or more System Designs created as the result of a site Survey and the discovery of Install Locations.  Each System Design is made up of one or more System Design Arrays.</description>
    <fields>
        <fullName>Account_Number__c</fullName>
        <formula>&apos;pete&apos;</formula>
        <label>Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Annual_Degradation_Factor__c</fullName>
        <label>Annual Degradation Factor</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Astrum_Balance_of_System_Derate__c</fullName>
        <defaultValue>$Setup.System_Derate_Defaults__c.Astrum_Balance_of_System_Derate__c</defaultValue>
        <label>Astrum Balance of System Derate</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Astrum_Invalid_SQ_Error_Message__c</fullName>
        <label>Astrum Invalid SQ Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Astrum_SQ_Calculation_Status__c</fullName>
        <label>Astrum SQ Calculation Status</label>
        <picklist>
            <picklistValues>
                <fullName>Valid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invalid</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Processing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Aurora_Production_Study_Design__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Aurora Production Study Design</description>
        <inlineHelpText>Aurora Production Study Design</inlineHelpText>
        <label>Aurora Production Study Design</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Average_Azimuth__c</fullName>
        <formula>Weighted_Panel_Azimuth_Sum__c /  Panel_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Azimuth</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Average_Tilt__c</fullName>
        <formula>Weighted_Panel_Tilt_Sum__c /  Panel_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Tilt</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Avoided_Utility_Rate__c</fullName>
        <label>Astrum Avoided Utility Rate ($/kWh)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CPRE_Invalid_SQ_Error_Message__c</fullName>
        <label>CPRE Invalid SQ Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CPRE_SQ_Calculation_Status__c</fullName>
        <label>CPRE SQ Calculation Status</label>
        <picklist>
            <picklistValues>
                <fullName>Valid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invalid</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Processing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Calculated_Price_per_Watt__c</fullName>
        <description>Price per Watt based on the calculated Total System Price</description>
        <formula>Calculated_System_Price__c /  (Total_System_Size_kW__c * 1000)</formula>
        <label>Calculated Price per Watt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Calculated_System_Price__c</fullName>
        <description>Calculated Price as configured before adjustments</description>
        <label>Calculated System Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Closed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is System Design Closed ?</inlineHelpText>
        <label>Closed ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Design__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Current Design</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_System_Design_Quote__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Current System Design Quote</label>
        <referenceTo>System_Design_Quote__c</referenceTo>
        <relationshipLabel>System Designs</relationshipLabel>
        <relationshipName>System_Designs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Default_CB_Panel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default CB Panel</label>
        <referenceTo>CB_Panel__c</referenceTo>
        <relationshipLabel>System Designs</relationshipLabel>
        <relationshipName>System_Designs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>For_Customer_Notes__c</fullName>
        <label>For Customer Notes</label>
        <length>400</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Ground_Mount_Arrays__c</fullName>
        <description>Number of Arrays that are Ground Mounts in this System Design</description>
        <inlineHelpText>Number of Arrays that are Ground Mounts in this System Design</inlineHelpText>
        <label>Ground Mount Arrays</label>
        <summaryFilterItems>
            <field>System_Design_Array__c.Mounting_Type__c</field>
            <operation>contains</operation>
            <value>Ground Mount</value>
        </summaryFilterItems>
        <summaryForeignKey>System_Design_Array__c.System_Design__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Include_Legacy_Panels__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Include Legacy Panels</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Includes_Outbuilding_Installation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This System Design Includes an at least One (1) Array Installed on an Outbuilding</description>
        <inlineHelpText>This System Design Includes an at least One (1) Array Installed on an Outbuilding</inlineHelpText>
        <label>Includes Outbuilding Installation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Includes_Remote_Meter__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This box should be checked if the System Design includes an array located on a utility meter that is remote to the home/primary structure.</description>
        <inlineHelpText>This box should be checked if the System Design includes an array located on a utility meter that is remote to the home/primary structure.</inlineHelpText>
        <label>Includes Remote Meter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inside_Only_Conduit__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This System Design has INSIDE ONLY Conduit</description>
        <inlineHelpText>This System Design has INSIDE ONLY Conduit</inlineHelpText>
        <label>Inside Only Conduit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inverter_Efficiency_AC_System_Size_kW__c</fullName>
        <label>Inverter Efficiency AC System Size (kW)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date__c</fullName>
        <description>Shows modified date with a prefix * representing the current design.</description>
        <formula>if(Current_Design__c = true, &apos;&apos;,&apos; &apos;) &amp; TEXT(YEAR(DATEVALUE(LastModifiedDate)))+&quot;-&quot; +TEXT(MONTH(DATEVALUE(LastModifiedDate)))+&quot;-&quot; +TEXT(DAY(DATEVALUE(LastModifiedDate)))</formula>
        <inlineHelpText>Shows modified date with a prefix * representing the current design.</inlineHelpText>
        <label>Last Modified Date*</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Astrum_Site_Quality__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Box is checked if System Design was created prior to 3/12/14 11:00am and Site Quality has not been recalled.</description>
        <label>Legacy Astrum Site Quality</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Max_Install_Location_Pitch__c</fullName>
        <description>The Maximum Pitch of Any Install Location Used For This Design</description>
        <inlineHelpText>The Maximum Pitch of Any Install Location Used For This Design</inlineHelpText>
        <label>Max Install Location Pitch</label>
        <summarizedField>System_Design_Array__c.Max_Install_Location_Pitch__c</summarizedField>
        <summaryFilterItems>
            <field>System_Design_Array__c.Array_Size_kW__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>System_Design_Array__c.System_Design__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Max_Install_Location_Stories__c</fullName>
        <description>Maximum Number of Stories Of This Design&apos;s Install Locations</description>
        <inlineHelpText>Maximum Number of Stories Of This Design&apos;s Install Locations</inlineHelpText>
        <label>Maximum Number of Stories</label>
        <summarizedField>System_Design_Array__c.Max_Install_Location_Stories__c</summarizedField>
        <summaryFilterItems>
            <field>System_Design_Array__c.Array_Size_kW__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>System_Design_Array__c.System_Design__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Max_Inverter_Output_AC_System_Size_kW__c</fullName>
        <label>Max Inverter Output AC System Size (kW)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Apr_Flat_kWh__c</fullName>
        <label>Method 1 Apr Flat kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Apr_Off_Peak_kWh__c</fullName>
        <label>Method 1 Apr Off_Peak kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Apr_Part_Peak_kWh__c</fullName>
        <label>Method 1 Apr Part_Peak kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Apr_Peak_kWh__c</fullName>
        <label>Method 1 Apr Peak kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Aug_Flat_kWh__c</fullName>
        <label>Method 1 Aug Flat kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Aug_Off_Peak_kWh__c</fullName>
        <label>Method 1 Aug Off_Peak kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Aug_Part_Peak_kWh__c</fullName>
        <label>Method 1 Aug Part_Peak kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Aug_Peak_kWh__c</fullName>
        <label>Method 1 Aug Peak kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Dec_Flat_kWh__c</fullName>
        <label>Method 1 Dec Flat kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Dec_Off_Peak_kWh__c</fullName>
        <label>Method 1 Dec Off_Peak kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Dec_Part_Peak_kWh__c</fullName>
        <label>Method 1 Dec Part_Peak kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Dec_Peak_kWh__c</fullName>
        <label>Method 1 Dec Peak kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Feb_Flat_kWh__c</fullName>
        <label>Method 1 Feb Flat kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Feb_Off_Peak_kWh__c</fullName>
        <label>Method 1 Feb Off_Peak kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Feb_Part_Peak_kWh__c</fullName>
        <label>Method 1 Feb Part_Peak kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Feb_Peak_kWh__c</fullName>
        <label>Method 1 Feb Peak kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Jan_Flat_kWh__c</fullName>
        <label>Method 1 Jan Flat kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Jan_Off_Peak_kWh__c</fullName>
        <label>Method 1 Jan Off_Peak kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Jan_Part_Peak_kWh__c</fullName>
        <label>Method 1 Jan Part_Peak kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Jan_Peak_kWh__c</fullName>
        <label>Method 1 Jan Peak kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Jul_Flat_kWh__c</fullName>
        <label>Method 1 Jul Flat kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Jul_Off_Peak_kWh__c</fullName>
        <label>Method 1 Jul Off_Peak kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Jul_Part_Peak_kWh__c</fullName>
        <label>Method 1 Jul Part_Peak kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Jul_Peak_kWh__c</fullName>
        <label>Method 1 Jul Peak kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Jun_Flat_kWh__c</fullName>
        <label>Method 1 Jun Flat kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Jun_Off_Peak_kWh__c</fullName>
        <label>Method 1 Jun Off_Peak kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Jun_Part_Peak_kWh__c</fullName>
        <label>Method 1 Jun Part_Peak kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Jun_Peak_kWh__c</fullName>
        <label>Method 1 Jun Peak kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Mar_Flat_kWh__c</fullName>
        <label>Method 1 Mar Flat kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Mar_Off_Peak_kWh__c</fullName>
        <label>Method 1 Mar Off_Peak kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Mar_Part_Peak_kWh__c</fullName>
        <label>Method 1 Mar Part_Peak kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Mar_Peak_kWh__c</fullName>
        <label>Method 1 Mar Peak kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_May_Flat_kWh__c</fullName>
        <label>Method 1 May Flat kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_May_Off_Peak_kWh__c</fullName>
        <label>Method 1 May Off_Peak kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_May_Part_Peak_kWh__c</fullName>
        <label>Method 1 May Part_Peak kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_May_Peak_kWh__c</fullName>
        <label>Method 1 May Peak kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Nov_Flat_kWh__c</fullName>
        <label>Method 1 Nov Flat kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Nov_Off_Peak_kWh__c</fullName>
        <label>Method 1 Nov Off_Peak kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Nov_Part_Peak_kWh__c</fullName>
        <label>Method 1 Nov Part_Peak kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Nov_Peak_kWh__c</fullName>
        <label>Method 1 Nov Peak kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Oct_Flat_kWh__c</fullName>
        <label>Method 1 Oct Flat kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Oct_Off_Peak_kWh__c</fullName>
        <label>Method 1 Oct Off_Peak kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Oct_Part_Peak_kWh__c</fullName>
        <label>Method 1 Oct Part_Peak kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Oct_Peak_kWh__c</fullName>
        <label>Method 1 Oct Peak kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Sep_Flat_kWh__c</fullName>
        <label>Method 1 Sep Flat kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Sep_Off_Peak_kWh__c</fullName>
        <label>Method 1 Sep Off_Peak kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Sep_Part_Peak_kWh__c</fullName>
        <label>Method 1 Sep Part_Peak kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_1_Sep_Peak_kWh__c</fullName>
        <label>Method 1 Sep Peak kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Apr_Flat_kWh__c</fullName>
        <label>Method 2 Apr Flat kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Apr_Off_Peak_kWh__c</fullName>
        <label>Method 2 Apr Off_Peak kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Apr_Part_Peak_kWh__c</fullName>
        <label>Method 2 Apr Part_Peak kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Apr_Peak_kWh__c</fullName>
        <label>Method 2 Apr Peak kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Aug_Flat_kWh__c</fullName>
        <label>Method 2 Aug Flat kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Aug_Off_Peak_kWh__c</fullName>
        <label>Method 2 Aug Off_Peak kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Aug_Part_Peak_kWh__c</fullName>
        <label>Method 2 Aug Part_Peak kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Aug_Peak_kWh__c</fullName>
        <label>Method 2 Aug Peak kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Dec_Flat_kWh__c</fullName>
        <label>Method 2 Dec Flat kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Dec_Off_Peak_kWh__c</fullName>
        <label>Method 2 Dec Off_Peak kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Dec_Part_Peak_kWh__c</fullName>
        <label>Method 2 Dec Part_Peak kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Dec_Peak_kWh__c</fullName>
        <label>Method 2 Dec Peak kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Feb_Flat_kWh__c</fullName>
        <label>Method 2 Feb Flat kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Feb_Off_Peak_kWh__c</fullName>
        <label>Method 2 Feb Off_Peak kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Feb_Part_Peak_kWh__c</fullName>
        <label>Method 2 Feb Part_Peak kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Feb_Peak_kWh__c</fullName>
        <label>Method 2 Feb Peak kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Jan_Flat_kWh__c</fullName>
        <label>Method 2 Jan Flat kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Jan_Off_Peak_kWh__c</fullName>
        <label>Method 2 Jan Off_Peak kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Jan_Part_Peak_kWh__c</fullName>
        <label>Method 2 Jan Part_Peak kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Jan_Peak_kWh__c</fullName>
        <label>Method 2 Jan Peak kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Jul_Flat_kWh__c</fullName>
        <label>Method 2 Jul Flat kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Jul_Off_Peak_kWh__c</fullName>
        <label>Method 2 Jul Off_Peak kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Jul_Part_Peak_kWh__c</fullName>
        <label>Method 2 Jul Part_Peak kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Jul_Peak_kWh__c</fullName>
        <label>Method 2 Jul Peak kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Jun_Flat_kWh__c</fullName>
        <label>Method 2 Jun Flat kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Jun_Off_Peak_kWh__c</fullName>
        <label>Method 2 Jun Off_Peak kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Jun_Part_Peak_kWh__c</fullName>
        <label>Method 2 Jun Part_Peak kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Jun_Peak_kWh__c</fullName>
        <label>Method 2 Jun Peak kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Mar_Flat_kWh__c</fullName>
        <label>Method 2 Mar Flat kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Mar_Off_Peak_kWh__c</fullName>
        <label>Method 2 Mar Off_Peak kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Mar_Part_Peak_kWh__c</fullName>
        <label>Method 2 Mar Part_Peak kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Mar_Peak_kWh__c</fullName>
        <label>Method 2 Mar Peak kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_May_Flat_kWh__c</fullName>
        <label>Method 2 May Flat kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_May_Off_Peak_kWh__c</fullName>
        <label>Method 2 May Off_Peak kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_May_Part_Peak_kWh__c</fullName>
        <label>Method 2 May Part_Peak kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_May_Peak_kWh__c</fullName>
        <label>Method 2 May Peak kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Nov_Flat_kWh__c</fullName>
        <label>Method 2 Nov Flat kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Nov_Off_Peak_kWh__c</fullName>
        <label>Method 2 Nov Off_Peak kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Nov_Part_Peak_kWh__c</fullName>
        <label>Method 2 Nov Part_Peak kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Nov_Peak_kWh__c</fullName>
        <label>Method 2 Nov Peak kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Oct_Flat_kWh__c</fullName>
        <label>Method 2 Oct Flat kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Oct_Off_Peak_kWh__c</fullName>
        <label>Method 2 Oct Off_Peak kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Oct_Part_Peak_kWh__c</fullName>
        <label>Method 2 Oct Part_Peak kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Oct_Peak_kWh__c</fullName>
        <label>Method 2 Oct Peak kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Sep_Flat_kWh__c</fullName>
        <label>Method 2 Sep Flat kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Sep_Off_Peak_kWh__c</fullName>
        <label>Method 2 Sep Off_Peak kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Sep_Part_Peak_kWh__c</fullName>
        <label>Method 2 Sep Part_Peak kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Method_2_Sep_Peak_kWh__c</fullName>
        <label>Method 2 Sep Peak kWh</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NRG_Avoided_Utility_Rate__c</fullName>
        <label>NRG Avoided Utility Rate ($/kWh)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NRG_Balance_of_System_Derate__c</fullName>
        <defaultValue>$Setup.System_Derate_Defaults__c.NRG_Balance_of_System_Derate__c</defaultValue>
        <label>NRG Balance of System Derate</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NRG_Invalid_SQ_Error_Message__c</fullName>
        <label>NRG Invalid SQ Error Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>NRG_Overall_Site_Quality__c</fullName>
        <formula>IF(
OR( NRG_Projected_Annual_Output_kWh_y__c = 0 ,Total_System_Size_kW__c = 0) ,
0,
NRG_Projected_Annual_Output_kWh_y__c / Total_System_Size_kW__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NRG Overall Site Quality</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NRG_Projected_Annual_Output_kWh_y__c</fullName>
        <description>NRG Projected Annual Output (kWh/y) - Rollup by Trigger on SD Array</description>
        <label>NRG Projected Annual Output (kWh/y)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NRG_SQ_Calculation_Status__c</fullName>
        <label>NRG SQ Calculation Status</label>
        <picklist>
            <picklistValues>
                <fullName>Valid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invalid</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Processing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Internal Salesforce Notes</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Number_of_Arrays_With_Special_Parts__c</fullName>
        <description>Number of System Design Arrays That Require Special Parts</description>
        <inlineHelpText>Number of System Design Arrays That Require Special Parts</inlineHelpText>
        <label>Number of Arrays With Special Parts</label>
        <summaryFilterItems>
            <field>System_Design_Array__c.Special_Parts_Required__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>System_Design_Array__c.System_Design__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
</CustomObject>